--- a/apps/picom/picom.conf
+++ b/apps/picom/picom.conf
@@ -2,16 +2,21 @@
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 0.0;
+#corner-radius = 0.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
-  "class_g = 'Polybar'",
   "class_g = 'Bar'"
 ];
 
-#round-borders = 8;
+#backend = "glx";
+#vsync = true;
+#mark-wmwin-focused = true;
+#unredir-if-possible = true;
+#detect-rounded-corners = true;
+#corner-radius = 25.0;
+#round-borders = 1;
 #round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
+#  "class_g = 'Bar'",
 #];
 
 # Specify a list of border width rules, in the format `PIXELS:PATTERN`, 
@@ -41,18 +46,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 14;
+shadow-radius = 21;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .75
+shadow-opacity = 0.75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -14;
+shadow-offset-x = -18;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -14;
+shadow-offset-y = -18;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -132,30 +137,34 @@ fade-exclude = [
 #################################
 
 
+active-opacity = 1;
+frame-opacity = 0.8;
+inactive-opacity = 0.2;
+inactive-opacity-override = false;
+mark-wmin-focused = false;
+
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+#inactive-opacity = 0.4;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.8;
+#frame-opacity = 0.8;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false;
+#inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 1.0;
+#active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+#inactive-dim = 0.5
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
 focus-exclude = [
-  "class_g = 'Cairo-clock'",
-  "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'"                    # maim
+  "class_g = 'Bar'"                    # lemonbar
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -169,21 +178,9 @@ focus-exclude = [
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = [
-  "100:class_g     = 'Bar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
-  "80:class_g     = 'Polybar'",
-  "100:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
-  "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
-];
+#opacity-rule = [
+#  "100:class_g     = 'Bar'"             # lemonbar
+#];
 
 
 #################################
@@ -293,7 +290,7 @@ opacity-rule = [
 # child that has 'WM_STATE') and mark them as active.
 #
 # mark-wmwin-focused = false
-mark-wmwin-focused = true;
+#mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
@@ -303,7 +300,7 @@ mark-ovredir-focused = true;
 # shaped windows. The accuracy is not very high, unfortunately.
 #
 # detect-rounded-corners = false
-detect-rounded-corners = true;
+#detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
