--- a/apps/ncmpcpp/config
+++ b/apps/ncmpcpp/config
@@ -1,44 +1,71 @@
-u[mpd]
-mpd_music_dir = "/home/koetemagie/Música/Libraria"
-mpd_host = "localhost"
-mpd_port = "6600"
-mpd_crossfade_time = "2"
+### Directories ###
+ncmpcpp_directory = ~/.config/ncmpcpp
+#lyrics_directory  = ~/.local/share/lyrics
+mpd_music_dir     = ~/music/libraria
 
-
-[visualizer]
-visualizer_data_source = "/tmp/mpd.fifo"
-visualizer_in_stereo = "no"
-visualizer_type = "spectrum"
-visualizer_output_name = "my_fifo"
-visualizer_look = "■▶"
-visualizer_color = "default"
-
-[header]
-header_visibility = "no"
-header_window_color = "default"
-volume_color = "default"
-state_line_color = "black"
-
-[playlist]
-playlist_display_mode = "classic"
-song_list_format = "{{%a - %t}|{%f}}{$R%l}"
-now_playing_prefix = "$b$5"
-now_playing_suffix = "$/b$9"
-
-[statusbar]
-progressbar_look = "■▶ "
-progressbar_color = "black"
-statusbar_visibility = "no"
-statusbar_color = "default"
-song_status_format = "{{%a{ - %t}}|{ - %f}{ - %b{ (%y)}}}"
-
-[library]
-song_library_format = "{{%a - %t}|{%f}}{$R%l}"
-empty_tag_color = "black"
-
-[global]
-colors_enabled = "yes"
-main_window_color = "default"
+### Behaviour ###
+# execute_on_song_change = "bash ~/.config/ncmpcpp/mpd-notification"
+message_delay_time = 1
+autocenter_mode = "yes"
 centered_cursor = "yes"
-enable_window_title = "yes"
-external_editor = "nvim"
+ignore_leading_the = "yes"
+allow_for_physical_item_deletion = "no"
+
+### Visualizer ###  
+# visualizer_fifo_path = /tmp/mpd.fifo
+# visualizer_output_name = "mpd_visualizer"
+# visualizer_in_stereo = "yes"
+# visualizer_sample_multiplier = 2
+# visualizer_sync_interval = 30
+
+### Appearance ###
+colors_enabled = "yes"
+playlist_display_mode = "columns"
+browser_display_mode = "columns"
+
+# Window #
+song_window_title_format = "mpd » {%a - }{%t}|{%f}"
+statusbar_visibility = "yes"
+header_visibility = "no"
+titles_visibility = "no"
+
+# Progress bar #
+#progressbar_look = "⠒⠒⠐"
+#progressbar_look = "•••"
+#progressbar_look = "---"
+#progressbar_look = "▀▀ "
+progressbar_look = "╼·"
+#progressbar_look = "━━━"
+#progressbar_look = "━━─"
+#progressbar_look = "◾◾◽"
+#progressbar_look = "─╼─"
+
+color1 = red
+color2 = red
+user_interface                        = alternative
+alternative_header_first_line_format  = {$6$b%a$9} {$7%t$6}
+alternative_header_second_line_format = {$7%b$9} {$6(%y)$9}
+alternative_ui_separator_color        = 7
+header_window_color                   = red
+display_volume_level                  = yes
+statusbar_color                       = red
+current_item_prefix                   = $(3)$b
+current_item_suffix                   = $/b
+selected_item_prefix                  = $(white_red)$b
+selected_item_suffix                  = $/b$(end)
+browser_playlist_prefix = "$3Playlist$3"
+progressbar_color = "black"
+progressbar_elapsed_color = "red"
+now_playing_prefix = "$b"
+now_playing_suffix = "$/b"
+song_status_format = "$b$6%t$/b {$2by} $b$6%a$8$/b"
+song_list_format = $(red){%a}$(end) $(black){%t}$(end) $R $(red){%b}$(end) $(magenta)({%l})$(end)
+statusbar_time_color = "red"
+player_state_color = "blue"
+volume_color = "blue"
+state_flags_color = "red"
+song_columns_list_format = "(15)[red]{lr}(1)[white]{}(40)[black]{a}(40)[red]{t}"
+empty_tag_color = red
+discard_colors_if_item_is_selected = yes
+main_window_color = "red"
+state_line_color = "blue"
