META: Cleaned and Updated

--- a/_config/ncmpcpp/config
+++ b/_config/ncmpcpp/config
@@ -15,7 +15,7 @@ mpd_music_dir     = ~/music/libraria
 
 #             message_delay_time = 0
 autocenter_mode                  = "yes"
-centered_cursor                  = "yes"
+centeblue_cursor                  = "yes"
 ignore_leading_the               = "yes"
 allow_for_physical_item_deletion = "no"
 colors_enabled                   = "yes"
@@ -50,7 +50,7 @@ browser_display_mode  = "columns"
 
 song_window_title_format = "mpd {%a - }{%t}|{%f}"
 statusbar_visibility     = "yes"
-header_visibility        = "no"
+header_visibility        = "yes"
 titles_visibility        = "no"
 
 
@@ -62,13 +62,15 @@ titles_visibility        = "no"
 #progressbar_look = "⠒⠒⠐"
 #progressbar_look = "•••"
 #progressbar_look = "---"
-#progressbar_look = "▀▀ "
-progressbar_look = "╼o"
+progressbar_look = "▀▀▀"
+#progressbar_look = "╼o"
 #progressbar_look = "━━━"
 #progressbar_look = "━━─"
 #progressbar_look = "◾◾◽"
 #progressbar_look = "─╼─"
-
+#
+progressbar_color         = "black"
+progressbar_elapsed_color = "blue"
 
 #--------------------------------------------------------------------------------
 # Colours for entire ncmpcpp, change here for your own needs
@@ -76,55 +78,57 @@ progressbar_look = "╼o"
 #--------------------------------------------------------------------------------
 
 
-empty_tag_color             = "white"
-header_window_color         = "white"
-volume_color                = "white"
-state_line_color            = "blue"
-state_flags_color           = "blue"
-main_window_color           = "blue"
-color1                      = "blue"
-color2                      = "cyan"
-main_window_highlight_color = "white"
-progressbar_color           = "blue"
-statusbar_color             = "white"
-active_column_color         = "white"
-window_border_color         = "white"
-active_window_border        = "magenta"
+#empty_tag_color             = "white"
+#header_window_color         = "white"
+#volume_color                = "white"
+#state_line_color            = "blue"
+#state_flags_color           = "blue"
+#main_window_color           = "blue"
+#color1                      = "blue"
+#color2                      = "cyan"
+#main_window_highlight_color = "white"
+#progressbar_color           = "blue"
+#statusbar_color             = "white"
+#active_column_color         = "white"
+#window_border_color         = "white"
+#active_window_border        = "magenta"
 
 
 #--------------------------------------------------------------------------------
 # Header
 #--------------------------------------------------------------------------------
 
-alternative_header_first_line_format  = {$6$b%a$9} {$7%t$6}
-alternative_header_second_line_format = {$7%b$9} {$6(%y)$9}
 
 
-
-
-alternative_ui_separator_color        = color_header_simple
-header_window_color                   = red
+header_window_color                   = blue
 display_volume_level                  = yes
-statusbar_color                       = red
+statusbar_color                       = blue
 current_item_prefix                   = $(3)$b
-current_item_suffix                   = $/b
-selected_item_prefix                  = $(white_red)$b
+selected_item_prefix                  = $(blue)$b
 selected_item_suffix                  = $/b$(end)
+song_list_format = $(blue){%a}$(end) $(cyan){%t}$(end) $R $(cyan){%b}$(end) $(white)({%l})$(end)
+current_item_suffix                   = $/b
 browser_playlist_prefix = "$3Playlist$3"
-progressbar_color = "black"
-progressbar_elapsed_color = "red"
+
 now_playing_prefix = "$b"
 now_playing_suffix = "$/b"
 song_status_format = "$b$6%t$/b {$2by} $b$6%a$8$/b"
-song_list_format = $(white){%a}$(end) $(black){%t}$(end) $R $(red){%b}$(end) $(magenta)({%l})$(end)
 
 
-statusbar_time_color = "red"
+
+message_delay_time = 0
+statusbar_time_color = "blue"
 player_state_color = "blue"
 volume_color = "blue"
-state_flags_color = "red"
-song_columns_list_format = "(15)[default]{lr}(1)[]{}(40)[black]{a}(40)[red]{t}"
-empty_tag_color = red
+state_flags_color = "blue"
+song_columns_list_format = "(1)[]{}(40)[cyan]{ar}(6)[white]{lr}(1)[white]{}(40)[blue]{t}"
+empty_tag_color = blue
 discard_colors_if_item_is_selected = yes
-main_window_color = "red"
-state_line_color = "blue"
+main_window_color = "blue"
+state_line_color = "b2lue"
+
+autocenter_mode = "yes"
+song_list_format = " $5%a $2•  $8%t"
+now_playing_prefix = "$b$2> "
+#now_playing_suffix = "$8$/b"
+#song_status_format = " $6%a  $7%t  $5%b "
