--- a/_config/picom/picom.conf
+++ b/_config/picom/picom.conf
@@ -134,6 +134,7 @@ opacity-rule = [
   "100:class_g = 'mpv'",
   "100:name *= 'Firefox'",
   "89:class_g = 'Bar'",
+  "100:class_g = 'TelegramDesktop'",
 ];
 #
 # opacity-rule = []
