--- a/_config/ncmpcpp/config
+++ b/_config/ncmpcpp/config
@@ -13,12 +13,15 @@ mpd_music_dir     = ~/music/libraria
 #--------------------------------------------------------------------------------
 
 
-#             message_delay_time = 0
 autocenter_mode                  = "yes"
-centeblue_cursor                  = "yes"
+#centeblue_cursor                 = "yes"
 ignore_leading_the               = "yes"
-allow_for_physical_item_deletion = "no"
 colors_enabled                   = "yes"
+header_text_scrolling            = "yes"
+allow_for_physical_item_deletion = "no"
+header_visibility                = "no"
+statusbar_visibility             = "no"
+cyclic_scrolling                 = "no"
 
 
 #--------------------------------------------------------------------------------
@@ -38,7 +41,6 @@ colors_enabled                   = "yes"
 #--------------------------------------------------------------------------------
 
 
-colors_enabled        = "yes"
 playlist_display_mode = "columns"
 browser_display_mode  = "columns"
 
@@ -49,35 +51,55 @@ browser_display_mode  = "columns"
 
 
 song_window_title_format = "mpd {%a - }{%t}|{%f}"
-statusbar_visibility     = "yes"
-header_visibility        = "yes"
-titles_visibility        = "no"
 
 
 #--------------------------------------------------------------------------------
-# Progress
+# Progress ;
+# Colours for entire ncmpcpp, change here for your own needs
+#   With a script, it's quite easy to change it :)
+#
+# Colours:
+# Available values for colors:
+#   0 default window color (discards all other colors)
+#   1 black
+#   2 red
+#   3 green
+#   4 yellow
+#   5 blue
+#   6 magenta
+#   7 cyan
+#   8 white
+#   9 end of current color
 #--------------------------------------------------------------------------------
 
 
 #progressbar_look = "⠒⠒⠐"
 #progressbar_look = "•••"
 #progressbar_look = "---"
-progressbar_look = "▀▀▀"
-#progressbar_look = "╼o"
+#progressbar_look = "▀▀▀"
+progressbar_look = "->"
 #progressbar_look = "━━━"
 #progressbar_look = "━━─"
 #progressbar_look = "◾◾◽"
 #progressbar_look = "─╼─"
-#
+
+
+#--------------------------------------------------------------------------------
+
+#--------------------------------------------------------------------------------
+
+
 progressbar_color         = "black"
 progressbar_elapsed_color = "blue"
-
-#--------------------------------------------------------------------------------
-# Colours for entire ncmpcpp, change here for your own needs
-#   With a script, it's quite easy to change it :)
-#--------------------------------------------------------------------------------
-
-
+statusbar_time_color      = "blue"
+player_state_color        = "blue"
+volume_color              = "blue"
+state_flags_color         = "blue"
+empty_tag_color           = "blue"
+main_window_color         = "blue"
+state_line_color          = "blue"
+statusbar_color           = "blue"
+header_window_color       = "blue"
 #empty_tag_color             = "white"
 #header_window_color         = "white"
 #volume_color                = "white"
@@ -87,11 +109,8 @@ progressbar_elapsed_color = "blue"
 #color1                      = "blue"
 #color2                      = "cyan"
 #main_window_highlight_color = "white"
-#progressbar_color           = "blue"
-#statusbar_color             = "white"
-#active_column_color         = "white"
-#window_border_color         = "white"
-#active_window_border        = "magenta"
+window_border_color         = "white"
+active_window_border        = "magenta"
 
 
 #--------------------------------------------------------------------------------
@@ -100,14 +119,12 @@ progressbar_elapsed_color = "blue"
 
 
 
-header_window_color                   = blue
-display_volume_level                  = yes
-statusbar_color                       = blue
-current_item_prefix                   = $(3)$b
-selected_item_prefix                  = $(blue)$b
-selected_item_suffix                  = $/b$(end)
-song_list_format = $(blue){%a}$(end) $(cyan){%t}$(end) $R $(cyan){%b}$(end) $(white)({%l})$(end)
-current_item_suffix                   = $/b
+display_volume_level    = yes
+current_item_prefix     = $(3)$b
+selected_item_prefix    = $(blue)$b
+selected_item_suffix    = $/b$(end)
+song_list_format        = $(blue){%a}$(end) $(cyan){%t}$(end) $R $(cyan){%b}$(end) $(white)({%l})$(end)
+current_item_suffix     = $/b
 browser_playlist_prefix = "$3Playlist$3"
 
 now_playing_prefix = "$b"
@@ -117,18 +134,11 @@ song_status_format = "$b$6%t$/b {$2by} $b$6%a$8$/b"
 
 
 message_delay_time = 0
-statusbar_time_color = "blue"
-player_state_color = "blue"
-volume_color = "blue"
-state_flags_color = "blue"
-song_columns_list_format = "(1)[]{}(40)[cyan]{ar}(6)[white]{lr}(1)[white]{}(40)[blue]{t}"
-empty_tag_color = blue
+song_columns_list_format = "(1)[]{}(40)[cyan]{ar}(5)[white]{lr}(1)[white]{}(40)[blue]{t}"
 discard_colors_if_item_is_selected = yes
-main_window_color = "blue"
-state_line_color = "b2lue"
 
-autocenter_mode = "yes"
-song_list_format = " $5%a $2•  $8%t"
-now_playing_prefix = "$b$2> "
+
+#song_list_format = " $5%a $2•  $8%t"
+#now_playing_prefix = "$b$2> "
 #now_playing_suffix = "$8$/b"
 #song_status_format = " $6%a  $7%t  $5%b "
