--- a/_config/picom/picom.conf
+++ b/_config/picom/picom.conf
@@ -11,20 +11,24 @@
 shadow = true;
 full-shadow = false;
 
+shadow-radius = 20;
+shadow-offset-x = -13;
+shadow-offset-y = -13;
+
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 25;
+#shadow-radius = 25;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 shadow-opacity = 1
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-1x = -15
-shadow-offset-x = -25;
+#shadow-offset-x = -25;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -5
-shadow-offset-y = -25;
+#shadow-offset-y = -25;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -106,14 +110,14 @@ inactive-opacity = 0.88;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.95;
+#frame-opacity = 0.95;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-active-opacity = 0.92
+active-opacity = 0.99
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -133,7 +137,7 @@ active-opacity = 0.92
 opacity-rule = [
   "100:class_g = 'mpv'",
   "100:name *= 'Firefox'",
-  "89:class_g = 'Bar'",
+  "96:class_g = 'Bar'",
   "100:class_g = 'TelegramDesktop'",
 ];
 #
@@ -180,7 +184,7 @@ opacity-rule = [
 #    blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+# blur-background-frame = true
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -243,7 +247,7 @@ opacity-rule = [
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
-#detect-client-opacity = true;
+detect-client-opacity = true;
 
 # Specify refresh rate of the screen. If not specified or 0, picom will
 # try detecting this with X RandR extension.
