--- a/_config/gtk-3.0/settings.ini
+++ b/_config/gtk-3.0/settings.ini
@@ -1,13 +1,15 @@
 [Settings]
 gtk-icon-theme-name=BeautyLine
+#gtk-theme-name=trollwut-pink-dark
 gtk-theme-name=trollwut-pink-dark
 gtk-font-name=Sans 10
-gtk-cursor-theme-name=Breeze-Snow (left)
+#gtk-cursor-theme-name=Breeze-Snow (left)
+gtk-cursor-theme-name="Breeze-Snow (left)"
 gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_BOTH
+gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
-gtk-menu-images=1
+gtk-menu-images=0
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
