--- a/_config/picom/picom.conf
+++ b/_config/picom/picom.conf
@@ -9,18 +9,19 @@
 #
 # shadow = false
 shadow = true;
-full-shadow = false;
-
-shadow-radius = 20;
-shadow-offset-x = -13;
-shadow-offset-y = -13;
+#full-shadow = false;
+shadow-radius = 16;
+shadow-offset-x = -8;
+shadow-offset-y = -8;
+shadow-color = "#000000";
+shadow-opacity = 0.75
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
 #shadow-radius = 25;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = 1
+
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-1x = -15
@@ -40,7 +41,6 @@ shadow-opacity = 1
 # shadow-blue = 0
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
-#shadow-color = "#000000"
 
 # Specify a list of conditions of windows that should have no shadow.
 #
@@ -76,18 +76,18 @@ shadow-opacity = 1
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-#fading = true;
+fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-#fade-in-step = 0.03;
+fade-in-step = 0.07;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-#fade-out-step = 0.03;
+fade-out-step = 0.07;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+#fade-delta = 10;
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -217,7 +217,7 @@ opacity-rule = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-#backend = "glx"
+#backend = "glx";
 #backend = "xrender";
 
 # Enable/disable VSync.
